# CS-poetry

./: README.md  cs_poetry.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tests.html
.github/workflows/: coverage.yml  documentation.yml  tests_functions.yml
_modules/: index.html
_modules/cs_poetry/: functions.html
_modules/tests/: tests_functions.html
_sources/: cs_poetry.rst.txt  modules.rst.txt
cs_poetry/: functions.py
docs/: conf.py  index.rst  tests.rst
tests/: tests_functions.py
