[tool.poetry]
name = "cs-poetry"
version = "0.1.0"
description = ""
authors = ["Gabriel Bruyere"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
coverage = "^6.0"
sphinx = { version = ">=7.2.6, <8.0.0", optional = true }
sphinx-rtd-theme = { version = ">=1.3.0, <2.0.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pylint = "^3.0.1"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
