[tool.poetry]
name = "cs-poetry"
version = "0.1.0"
description = "Description de votre projet"
authors = ["Gabriel Bruyere"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
coverage = "^6.0"
sphinx = "^4.0"
sphinx-rtd-theme = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pylint = "^3.0"
black = "^23.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
